--- a/src/scss/parts/_section-prices.scss
+++ b/src/scss/parts/_section-prices.scss
@@ -4,4 +4,103 @@
    @media (max-width: 768px) {
       padding-bottom: 4rem 0;
    }
+   &__title {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      position: relative;
+      display: inline-block;
+
+      &::before {
+         @include pseudo;
+         bottom: 0;
+         left: 0;
+         width: 7rem;
+         height: 2rem;
+         background-color: $success;
+         z-index: -1;
+         @media (max-width: 768px) {
+            width: 4.7rem;
+            height: 1.3rem;
+         }
+      }
+
+      @media (max-width: 768px) {
+         font-size: 2rem;
+      }
+   }
+   &__lead {
+      font-family: "Open Sans", sans-serif;
+      font-size: 1.4rem;
+      text-transform: none;
+      font-weight: 400;
+      margin-bottom: 10rem;
+      max-width: 730px;
+      @include push--auto;
+
+      @media (max-width: 768px) {
+         margin-bottom: 4rem 0;
+      }
+   }
+}
+
+.price-card {
+   display: block;
+   text-align: left;
+   padding: 30px 30px 40px;
+   color: inherit;
+   box-shadow: 0px 0px 50px 0px transparent;
+
+   &__title {
+      margin-bottom: 1rem;
+      font-size: 3rem;
+   }
+
+   &__price {
+      display: inline-block;
+      padding: 1rem 2rem;
+      font-size: 1.4rem;
+      color: $color-text-light;
+      background-color: $success;
+      margin-bottom: 5rem;
+   }
+
+   &__list {
+      list-style: none;
+      padding-left: 2rem;
+      font-family: "Open Sans", sans-serif;
+      font-size: 1.4rem;
+      text-transform: none;
+      font-weight: 400;
+      line-height: 2.5;
+      margin-bottom: 5rem;
+
+      @media (max-width: 768px) {
+         margin-bottom: 3rem;
+      }
+   }
+
+   &__item {
+      position: relative;
+      margin-bottom: 0.7rem;
+
+      &::before {
+         @include pseudo;
+         bottom: 0;
+         top: 50%;
+         width: 1rem;
+         height: 1rem;
+         transform: translate(-200%, -50%);
+         background-color: $success;
+         background-image: url("@img/marker.png");
+         background-size: cover;
+         background-position: 50% 50%;
+         background-repeat: no-repeat;
+      }
+   }
+
+   &:hover {
+      box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.25);
+      color: inherit;
+      text-decoration: none;
+   }
 }
