--- a/src/scss/parts/_section-prices.scss
+++ b/src/scss/parts/_section-prices.scss
@@ -2,7 +2,7 @@
    padding-bottom: 15rem;
    text-align: center;
    @media (max-width: 768px) {
-      padding-bottom: 4rem 0;
+      padding-bottom: 4rem;
    }
    &__title {
       font-size: 3rem;
@@ -38,7 +38,7 @@
       @include push--auto;
 
       @media (max-width: 768px) {
-         margin-bottom: 4rem 0;
+         margin-bottom: 4rem;
       }
    }
 }
@@ -46,9 +46,34 @@
 .price-card {
    display: block;
    text-align: left;
-   padding: 30px 30px 40px;
+   padding: 3rem 3rem 4rem;
    color: inherit;
-   box-shadow: 0px 0px 50px 0px transparent;
+   box-shadow: 0px 0px 5rem 0px transparent;
+   position: relative;
+
+   &::before,
+   &::after {
+      @include pseudo;
+   }
+
+   &::before {
+      height: 5px;
+      width: 100%;
+      top: 0;
+      left: 0;
+      background-color: $success;
+   }
+
+   &::after {
+      top: 5px;
+      right: 0;
+      border: 0.5rem solid transparent; 
+      border-top: 0.5rem solid $success; border-right: 0.5rem solid $success;
+   }
+
+   @media (max-width: 768px) {
+      padding: 2rem 2rem 2rem;
+   }
 
    &__title {
       margin-bottom: 1rem;
@@ -76,6 +101,7 @@
 
       @media (max-width: 768px) {
          margin-bottom: 3rem;
+         line-height: 1.2;
       }
    }
 
